--- a/Peter_smith_exercices/8_Parametric models/Cap_8_fixed.Rmd
+++ b/Peter_smith_exercices/8_Parametric models/Cap_8_fixed.Rmd
@@ -97,60 +97,124 @@ knitr::include_graphics("814.PNG")
 
 
 ```{r}
+### Function to calculate the CoxSnell residual
 
-lLogistic30<- survreg(Surv(time[1:11], cens[1:11])~1, data = voltages ,dist = "loglogistic")
-lLogistic32<- survreg(Surv(time[12:26], cens[12:26])~1, data = voltages ,dist = "loglogistic")
-lLogistic34<- survreg(Surv(time[27:45], cens[27:45])~1, data = voltages ,dist = "loglogistic")
-lLogistic36<- survreg(Surv(time[46:60], cens[46:60])~1, data = voltages ,dist = "loglogistic")
-
-
+CoxSnellResidual <- function (standRes, weight=1, dist){
+  
+  standRes <- standRes[rep(seq_len(length(standRes)), weight)]
+  
+  if (dist=="lognormal") {
+    
+    csr <- -log(1-pnorm(standRes))
+  }else if (dist=="weibull") {
+    
+    csr <- -log(exp(-exp(standRes)))
+    
+  }else if (dist=="exponential") {
+    
+    csr <- -log(-exp(standRes))
+  }
+}
 ```
 
 ```{r}
-knitr::include_graphics("LL.PNG")
+
+esr <- survreg(Surv(time, cens)~ KV, data = voltages, dist="exponential")
+
+wsr <- survreg(Surv(time, cens)~ KV, data = voltages, dist="weibull")
+
+lnsr <- survreg(Surv(time, cens) ~ KV, data = voltages, dist="lognormal")
+
+
 ```
+
 
 ```{r}
-### loglogistic 30 KV
+#standardized residuals
 
-time <- voltages$time
+lfe <- predict(esr, type="lp")
+sderr <- (log(voltages$time)-lfe)/esr$scale
+cxsne <- CoxSnellResidual(standRes=sderr, dist="lognormal")
 
-a30 <- exp(-(3.803895/0.659181))
-y30 <- 1/0.659181
-st30 <- 1/(1+(a30*voltages$time[1:11])^y30)
-lLog30 <- log(st30)
+```
 
-### loglogistic 32 KV
 
-a32 <- exp(-(2.322379/1.288298))
-y32 <- 1/1.288298
-st32 <- 1/(1+(a32*voltages$time[12:26])^y32)
-lLog32 <- log(st32)
+```{r}
 
-### loglogistic 34 KV
+lfw <- predict(wsr, type="lp")
+sderr <- (log(voltages$time)-lfw)/wsr$scale
+cxsnw <- CoxSnellResidual(standRes=sderr, dist="lognormal")
 
-a34 <- exp(-(1.833179/0.8521807))
-y34 <- 1/0.8521807
-st34 <- 1/(1+(a34*voltages$time[27:45])^y34)
-lLog34 <- log(st34)
-### loglogistic 36 KV
+```
 
-a36 <- exp(-(0.8649962/0.5964721))
-y36 <- 1/0.5964721
-st36 <- 1/(1+(a36*voltages$time[46:60])^y36)
-lLog36 <- log(st36)
 
-### lognormal
+```{r}
 
-plot(logtime[1:11],lLog30,col="red", pch = 19 , ylab= "Log-logistic position", xlab="Log(Faliure time)", main = "Log-logistic")
+lfln <- predict(lnsr, type="lp")
+sderr <- (log(voltages$time)-lfln)/lnsr$scale
+cxsnln <- CoxSnellResidual(standRes=sderr, dist="lognormal")
 
-plot(logtime[12:26],lLog32,col="blue", pch = 19)
-plot(logtime[27:45],lLog34 ,col="green", pch = 19)
-plot(logtime[46:60],lLog36,col="orange", pch = 19)
+```
 
 
 
+
+```{r}
+par(mfrow = c(1,3))
+
+
+
+### Exponential
+
+plot(log(cxsne[1:11]), logtime[1:11],col="red", pch = 19 , ylab= "log(t) position", xlab="Cox-Snell residuals", main = "Exponential", xlim=c(-7,2), ylim=c(-1.5,6))
+abline(lm(logtime[1:11]~log(cxsne[1:11])), col="red")
+
+points(log(cxsne[12:26]),logtime[12:26],col="blue", pch = 19)
+abline(lm(logtime[12:26]~log(cxsne[12:26])), col="blue")
+
+points(log(cxsne[27:45]),logtime[27:45],col="green", pch = 19)
+abline(lm(logtime[27:45]~log(cxsne[27:45])), col="green")
+
+points(log(cxsne[46:60]),logtime[46:60],col="orange", pch = 19)
+abline(lm(logtime[46:60]~log(cxsne[46:60])), col="orange")
+
+legend("bottomright", legend=c("30KV", "32KV", "34KV", "36KV"), col = c("red","blue","green","orange"), pch = 19, bty = "n")
+
+### Weibull
+
+plot(log(cxsnw[1:11]), logtime[1:11],col="red", pch = 19 , ylab= "log(t) position", xlab="Cox-Snell residuals", main = "Weibull", xlim=c(-8,2), ylim=c(-2,6))
+abline(lm(logtime[1:11]~log(cxsnw[1:11])), col="red")
+
+points(log(cxsnw[12:26]),logtime[12:26],col="blue", pch = 19)
+abline(lm(logtime[12:26]~log(cxsnw[12:26])), col="blue")
+
+points(log(cxsnw[27:45]),logtime[27:45],col="green", pch = 19)
+abline(lm(logtime[27:45]~log(cxsnw[27:45])), col="green")
+
+points(log(cxsnw[46:60]),logtime[46:60],col="orange", pch = 19)
+abline(lm(logtime[46:60]~log(cxsnw[46:60])), col="orange")
+
+legend("bottomright", legend=c("30KV", "32KV", "34KV", "36KV"), col = c("red","blue","green","orange"), pch = 19, bty = "n")
+
+
+### Lognormal
+
+plot(log(cxsnln[1:11]), logtime[1:11],col="red", pch = 19 , ylab= "log(t) position", xlab="Cox-Snell residuals", main = "Lognormal", xlim=c(-5.5,2), ylim=c(-2,6))
+abline(lm(logtime[1:11]~log(cxsnln[1:11])), col="red")
+
+points(log(cxsnln[12:26]),logtime[12:26],col="blue", pch = 19)
+abline(lm(logtime[12:26]~log(cxsnln[12:26])), col="blue")
+
+points(log(cxsnln[27:45]),logtime[27:45],col="green", pch = 19)
+abline(lm(logtime[27:45]~log(cxsnln[27:45])), col="green")
+
+points(log(cxsnln[46:60]),logtime[46:60],col="orange", pch = 19)
+abline(lm(logtime[46:60]~log(cxsnln[46:60])), col="orange")
+
+legend("bottomright", legend=c("30KV", "32KV", "34KV", "36KV"), col = c("red","blue","green","orange"), pch = 19, bty = "n")
 
 
 ```
+
+
 
