--- a/Peter_smith_exercices/8_Parametric models/Cap_8_fixed.Rmd
+++ b/Peter_smith_exercices/8_Parametric models/Cap_8_fixed.Rmd
@@ -92,12 +92,99 @@ abline(lm36, col ="orange")
 ```
 
 ```{r}
-knitr::include_graphics("814.PNG")
+knitr::include_graphics("8_5.PNG")
+```
+```{r}
+
+swt <- read.csv("switches.csv", header=T, sep =";")
+swt$Group <- as.factor(swt$Group)
+head(swt)
+
+```
+
+```{r}
+knitr::include_graphics("8_51.PNG")
+```
+
+```{r}
+GroupA <- subset(swt, Group == "A")
+GroupB <- subset(swt, Group == "B")
+
 ```
 
 
+### Diagnostic 1 graph
+
+For the accelerated models we must calculate the empirical survival function, will show location shifted versions of the baseline survival function when an accelerated lifetimes model is appropriate.
+
 ```{r}
+km.GA <- survfit(Surv(time,A)~1, data = GroupA)
+km.GB <- survfit(Surv(time,B)~1, data = GroupB)
+```
+
+```{r}
+
+plot(km.GA, conf.int=T,col=c("red"), xlab = "Millions of cycles to faliure", ylab = "S(t)", main="S(t) by Groups", mark.time = TRUE, lwd = 2, las=1)
+lines(km.GB, conf.int=T,col=c("blue"), mark.time = TRUE, lwd = 2, las=1)
+
+```
+
+
+### Diagnostic 3 graph
+
+Data are projected to find a better model to fit the data
+
+
+```{r}
+
+######
+
+logtimeA <- log(GroupA$time)
+StA <- km.GA$surv 
+weibullA <- log(-log(StA))
+exponentialA <- -log(StA)
+lognormalA <- qnorm(StA)
+
+GroupA <- cbind(GroupA,StA,logtimeA,weibullA,exponentialA,lognormalA)
+
+
+######
+
+logtimeB <- log(GroupB$time)
+StB <- km.GB$surv 
+weibullB <- log(-log(StB))
+exponentialB <- -log(StB)
+lognormalB <- qnorm(StB)
+
+GroupB <- cbind(GroupB,StB,logtimeB,weibullB,exponentialB,lognormalB)
+
+```
+
+
+```{r} 
+
+
+par(mfrow=c(1,3))
+
+plot(logtimeA, exponentialA, pch=16, xlab="log(Faliure)", sub="Exponencial",ylab="-log(S(t))", col ="red")
+points(logtimeB, exponentialB,pch=16, col="blue")
+
+plot(logtimeA, weibullA, pch=16, xlab="log(Faliure)", sub="Weibull",ylab="-log(S(t))", col ="red")
+points(logtimeB, weibullB,pch=16, col="blue")
+
+plot(logtimeA, lognormalA , pch=16, xlab="log(Faliure)", sub="LogNormal",ylab= expression(Phi^-1 * (S(t))), col ="red")
+points(logtimeB, lognormalB ,pch=16, col="blue")
+
+```
+```{r}
+
+
 ### Function to calculate the CoxSnell residual
+
+### Modified from 
+### https://blogs2.datall-analyse.nl/2016/02/19/rcode_martingale_residuals_aft_model/
+### Author:Stefan Gelissen
+### Based on: Modelling survival data in medical research, Collett’s 2003
 
 CoxSnellResidual <- function (standRes, weight=1, dist){
   
@@ -116,6 +203,53 @@ CoxSnellResidual <- function (standRes, weight=1, dist){
   }
 }
 ```
+
+It can be seen that it is the Weibull model, so we proceed to calculate its regressor data
+
+### Regression calculation
+
+```{r}
+
+reg_weibullA<-survreg(Surv(time, A)~1, dist='weibull',data = GroupA)
+
+reg_weibullB<-survreg(Surv(time, B)~1, dist='weibull',data = GroupB)
+
+
+```
+
+```{r}
+#standardized residuals
+
+lfA <- predict(reg_weibullA, type="lp")
+sderr <- (logtimeA-lfA)/reg_weibullA$scale
+cxsnA <- CoxSnellResidual(standRes=sderr, dist="weibull")
+
+lfB <- predict(reg_weibullB, type="lp")
+sderr <- (logtimeB-lfB)/reg_weibullB$scale
+cxsnB <- CoxSnellResidual(standRes=sderr, dist="weibull")
+
+```
+
+```{r}
+
+### CS Weibull
+
+plot(log(cxsnA), logtimeA,col="red", pch = 19 , ylab= "log(t) position", xlab="Cox-Snell residuals", main = "Cox-Snell residuals for both groups", xlim=c(-3,2), ylim=c(0,1.2))
+abline(lm(logtimeA~log(cxsnA)), col="red")
+
+points(log(cxsnB),logtimeB,col="blue", pch = 19)
+abline(lm(logtimeB~log(cxsnB)), col="blue")
+
+legend("bottomright", legend=c("CSR GA", "CSR GB"), col = c("red","blue"), pch = 19, bty = "n")
+
+```
+
+```{r}
+knitr::include_graphics("814.PNG")
+```
+
+
+
 
 ```{r}
 
