--- a/Peter_smith_exercices/8_Parametric models/Cap_8_fixed.Rmd
+++ b/Peter_smith_exercices/8_Parametric models/Cap_8_fixed.Rmd
@@ -34,7 +34,7 @@ Para verificar si los datos hacen parte de un modelo acelerado o hacen parte de 
 ```{r}
 
 km.voltages <- survfit(Surv(time,cens)~KV, data=voltages)
-summary(km.voltages)
+#summary(km.voltages)
 ```
 ### Graficos de la estimación de la sobrevida via Kaplan-Meier (EKM)
 
@@ -68,7 +68,7 @@ voltages <- cbind(voltages,St,logtime,weibull,exponential,lognormal)
 ```
 
 
-### Graficos ajuste a los modelos Probailisticos (EKM)
+### Graficos ajuste a los modelos Probailisticos
 
 ```{r}
 
@@ -224,7 +224,7 @@ plot(weibull[46:59] ~ logtime[46:59], pch=16, xlab="log(Faliure time)", sub="36K
 abline(lm36, col ="orange")
 
 ```
-Graficamente podemos comprobar que el modelo se ajusta bastante bien a una distibucion Weibull
+Gráficamente podemos comprobar que el modelo se ajusta bastante bien a una distibución Weibull, pues gran parte de los datos se ajustan a la regresión.
 
 ```{r}
 
@@ -236,7 +236,7 @@ alpha
 Weibull_voltages$loglik
 
 ```
-Para una distribución ji-cuadrado, con p = 0.28, se evidencia que la distribución sigue una distribución weibull, con un alpha = 0.7664
+Para una distribución ji-cuadrado, con p = 0.28, se evidencia que los datos sigue una distribución weibull, con un alpha = 0.7664.
 
 ```{r}
 knitr::include_graphics("8_5.PNG")
@@ -269,9 +269,9 @@ GroupB <- subset(swt, Group == "B")
 ```
 
 
-### Diagnostic 1 graph
+### Diagnostico 1 
 
-For the accelerated models we must calculate the empirical survival function, will show location shifted versions of the baseline survival function when an accelerated lifetimes model is appropriate.
+Una primera forma de verificar si los datos se ajustan a un modelo de riesgos proporcionales lo podemos hacer mediante la visualización de la estimación de la sobrevida vía  EKM.
 
 ```{r}
 km.GA <- survfit(Surv(time,A)~1, data = GroupA)
@@ -282,13 +282,13 @@ km.GB <- survfit(Surv(time,B)~1, data = GroupB)
 
 plot(km.GA, conf.int=T,col=c("red"), xlab = "Millions of cycles to faliure", ylab = "S(t)", main="S(t) by Groups", mark.time = TRUE, lwd = 2, las=1)
 lines(km.GB, conf.int=T,col=c("blue"), mark.time = TRUE, lwd = 2, las=1)
-
+legend("bottomleft", legend=c("Grupo A", "Grupo B"), col = c("red","blue"), pch = 19, bty = "n")
 ```
+Gracias al estimador kaplan meier vemos que los Switches pertenecientes al grupo A tiene un mejor desempeño que los del grupo B. También se observa que los estimadores no se cruzan entre si sugiriendo un modelo de riesgos proporcionales 
 
+### Diagnostico 2
 
-### Diagnostic 3 graph
-
-Data are projected to find a better model to fit the data
+A continuación se procede ajustar el modelo a un modelo probabilistico Weibull, Exponencial, lognormal.
 
 
 ```{r}
@@ -316,6 +316,7 @@ GroupB <- cbind(GroupB,StB,logtimeB,weibullB,exponentialB,lognormalB)
 
 ```
 
+### Graficos de los modelos probabilisticos
 
 ```{r} 
 
@@ -332,6 +333,14 @@ plot(logtimeA, lognormalA , pch=16, xlab="log(Faliure)", sub="LogNormal",ylab= e
 points(logtimeB, lognormalB ,pch=16, col="blue")
 
 ```
+Visualmente se puede decir que el modelo sigue una distribución Weibull, y parece ajustarse aun modelo de reisgos proporcionales. 
+
+### Verificación via Cox-snell
+
+Ahora diagnosticaremos la calidad del modelo elegido frente al conjunto de datos.
+
+### Función para el calculo de los residuales CoxSnell
+
 ```{r}
 
 
@@ -353,16 +362,15 @@ CoxSnellResidual <- function (standRes, weight=1, dist){
     
     csr <- -log(exp(-exp(standRes)))
     
-  }else if (dist=="exponential") {
-    
-    csr <- -log(-exp(standRes))
   }
 }
 ```
 
-It can be seen that it is the Weibull model, so we proceed to calculate its regressor data
 
-### Regression calculation
+
+### Calculos de los valores de la regresión
+
+Se obtiene la regresión para ambos grupos de Switch
 
 ```{r}
 
@@ -370,11 +378,13 @@ reg_weibullA<-survreg(Surv(time, A)~1, dist='weibull',data = GroupA)
 
 reg_weibullB<-survreg(Surv(time, B)~1, dist='weibull',data = GroupB)
 
-
 ```
 
+
+### Residuos estandarizados
+
 ```{r}
-#standardized residuals
+
 
 lfA <- predict(reg_weibullA, type="lp")
 sderr <- (logtimeA-lfA)/reg_weibullA$scale
@@ -386,11 +396,13 @@ cxsnB <- CoxSnellResidual(standRes=sderr, dist="weibull")
 
 ```
 
+### Calculo de los residuales CoxSnell
+
 ```{r}
 
 ### CS Weibull
 
-plot(log(cxsnA), logtimeA,col="red", pch = 19 , ylab= "log(t) position", xlab="Cox-Snell residuals", main = "Cox-Snell residuals for both groups", xlim=c(-3,2), ylim=c(0,1.2))
+plot(log(cxsnA), logtimeA,col="red", pch = 19 , ylab= "log(t)", xlab="Residuos Cox-Snell", main = "Residuos Cox-Snell", xlim=c(-3,2), ylim=c(0,1.2))
 abline(lm(logtimeA~log(cxsnA)), col="red")
 
 points(log(cxsnB),logtimeB,col="blue", pch = 19)
@@ -399,17 +411,19 @@ abline(lm(logtimeB~log(cxsnB)), col="blue")
 legend("bottomright", legend=c("CSR GA", "CSR GB"), col = c("red","blue"), pch = 19, bty = "n")
 
 ```
+Vemos que los residuales Cox-Snell se ajustan a la recta a la perfección por lo que podemos asegurar que le modelo sigue una distribución Weibull, pero no podemos asegurar que se ajusta a un modelo proporcional  pues no formar un angulo cercano a 45° a pesar que el intercepto es cercano a 0,y por ende al ser Weibull también a un modelo de vida acelerado.
 
 ```{r}
 knitr::include_graphics("814.PNG")
 ```
 
+### Ajuste de los datos a una regresión
 
+Para este ejercicio nuevamente se tomas los datos en el dataset de voltajes y se ajustan aun modelo a un weibull o a uno lognormal, haciendo uso de los residuos Cox_snell
 
 
 ```{r}
 
-esr <- survreg(Surv(time, cens)~ KV, data = voltages, dist="exponential")
 
 wsr <- survreg(Surv(time, cens)~ KV, data = voltages, dist="weibull")
 
@@ -419,15 +433,7 @@ lnsr <- survreg(Surv(time, cens) ~ KV, data = voltages, dist="lognormal")
 ```
 
 
-```{r}
-#standardized residuals
-
-lfe <- predict(esr, type="lp")
-sderr <- (log(voltages$time)-lfe)/esr$scale
-cxsne <- CoxSnellResidual(standRes=sderr, dist="lognormal")
-
-```
-
+### Calculo de los residuos estandarizados lognormal
 
 ```{r}
 
@@ -437,6 +443,7 @@ cxsnw <- CoxSnellResidual(standRes=sderr, dist="lognormal")
 
 ```
 
+### Calculo de los residuos estandarizados Weibull
 
 ```{r}
 
@@ -447,28 +454,12 @@ cxsnln <- CoxSnellResidual(standRes=sderr, dist="lognormal")
 ```
 
 
-
+### Visualización de los residuales Cox-Snell para Weibull o para log normal.
 
 ```{r}
-par(mfrow = c(1,3))
+par(mfrow = c(1,2))
 
 
-
-### Exponential
-
-plot(log(cxsne[1:11]), logtime[1:11],col="red", pch = 19 , ylab= "log(t) position", xlab="Cox-Snell residuals", main = "Exponential", xlim=c(-7,2), ylim=c(-1.5,6))
-abline(lm(logtime[1:11]~log(cxsne[1:11])), col="red")
-
-points(log(cxsne[12:26]),logtime[12:26],col="blue", pch = 19)
-abline(lm(logtime[12:26]~log(cxsne[12:26])), col="blue")
-
-points(log(cxsne[27:45]),logtime[27:45],col="green", pch = 19)
-abline(lm(logtime[27:45]~log(cxsne[27:45])), col="green")
-
-points(log(cxsne[46:60]),logtime[46:60],col="orange", pch = 19)
-abline(lm(logtime[46:60]~log(cxsne[46:60])), col="orange")
-
-legend("bottomright", legend=c("30KV", "32KV", "34KV", "36KV"), col = c("red","blue","green","orange"), pch = 19, bty = "n")
 
 ### Weibull
 
@@ -505,6 +496,6 @@ legend("bottomright", legend=c("30KV", "32KV", "34KV", "36KV"), col = c("red","b
 
 
 ```
-
+Mediante la visualización de los residuales Cox-snell podemos ver que nuestro modelo se ajusta mejor a una distribucón Lognormal que a una weibull y no sigue un modelo de riesgos proporcionales, pues su intercepto no es cercano a 0 y su recta no forma 45°
 
 
